tests/classes/inheritance/inheritedshadowself.no.test/Test.java
public class A {
    public class B {}
}
public class B extends A {
    public B m() {
        return this; // error
    }
}
